--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1114,7 +1114,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #043878;
+  background-color: #a0e2e1;
 }
 .cid-uTH3SyaxhF button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1135,7 +1135,7 @@ a {
 .cid-uTH3SyaxhF nav.opened .hamburger span:nth-child(1) {
   top: 8px;
   width: 0;
-  opacity: 0;
+  opacity: 1;
   right: 50%;
   transition: all 0.2s;
 }
@@ -2501,7 +2501,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #043878;
+  background-color: #a0e2e1;
 }
 .cid-uTH3SyaxhF button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3472,7 +3472,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #043878;
+  background-color: #a0e2e1;
 }
 .cid-uTH3SyaxhF button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4814,7 +4814,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #043878;
+  background-color: #a0e2e1;
 }
 .cid-uTH3SyaxhF button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5633,7 +5633,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #043878;
+  background-color: #a0e2e1;
 }
 .cid-uTH3SyaxhF button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -6388,7 +6388,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #043878;
+  background-color: #a0e2e1;
 }
 .cid-uTH3SyaxhF button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7188,7 +7188,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #043878;
+  background-color: #a0e2e1;
 }
 .cid-uTH3SyaxhF button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8014,7 +8014,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #043878;
+  background-color: #a0e2e1;
 }
 .cid-uTH3SyaxhF button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
