--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -700,6 +700,11 @@ input[type=range] {
   border-radius: 0.25rem;
 }
 
+.navbar-toggler .icon-bar {
+  background-color: #a0e2e1 !important;
+}
+
+
 .navbar-toggler:focus,
 .navbar-toggler:hover {
   text-decoration: none;
@@ -707,6 +712,7 @@ input[type=range] {
 }
 
 .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'><path stroke='%23a0e2e1' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/></svg>") !important;
   display: inline-block;
   width: 1.5em;
   height: 1.5em;
